Updates to version 110.3.

--- a/bootpd.tproj/bootpd.8
+++ b/bootpd.tproj/bootpd.8
@@ -283,6 +283,8 @@ The Post Office Protocol (POP3) server IP address(es) (option code 70).
 .It Sy dhcp_nntp_server
 The Network News Transport Protocol (NNTP) server IP address(es)
 (option code 71).
+.It Sy dhcp_proxy_auto_discovery_url
+The default Web Proxy Auto Discovery URL (option code 252).
 .El
 .Ss "/config/NetBootServer: NetBoot server configuration"
 This directory contains a number of properties that alter the NetBoot
